k8s/stage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graceline-cms-stage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graceline-cms-stage-api-deployment
  namespace: graceline-cms-stage
  labels:
    app: graceline-cms-stage-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graceline-cms-stage-api
  template:
    metadata:
      labels:
        app: graceline-cms-stage-api
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: graceline-cms-managed-identity-stage-sa
      nodeSelector:
        kubernetes.azure.com/scalesetpriority: spot
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      containers:
      - name: graceline-cms-stage-api
        image: coachmanagementaksacr.azurecr.io/graceline-cms-stage-api:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: graceline-cms-stage-api-service
  namespace: graceline-cms-stage
spec:
  selector:
    app: graceline-cms-stage-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-stage-ingress
  namespace: graceline-cms-stage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cms-stage-api.gracelinesoftware.com
    secretName: letsencrypt-cms-stage-api
  rules:
  - host: cms-stage-api.gracelinesoftware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graceline-cms-stage-api-service
            port:
              number: 80
